--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,7 @@
 @import 'components/_normalize';
 @import 'components/_bootstrap';
 @import 'components/_font-awesome';
+@import 'components/_mixins';
 @import 'components/_variables';
 @import 'components/_helpers';
 @import 'components/_general';
-
